--- a/index.html
+++ b/index.html
@@ -9,27 +9,38 @@
 
 
 <body>
-    <table>
-        <tr>
-            <td class="cell" id="0"></td>
-            <td class="cell" id="1"></td>
-            <td class="cell" id="2"></td>
-        </tr>
-        <tr>
-            <td class="cell" id="3"></td>
-            <td class="cell" id="4"></td>
-            <td class="cell" id="5"></td>
-        </tr>
-        <tr>
-            <td class="cell" id="6"></td>
-            <td class="cell" id="7"></td>
-            <td class="cell" id="8"></td>
-        </tr>
-    </table>
-
+    <div class="header">
+        TIC TAC TOE
+    </div>
+    <div class="separator"></div>
+    <div>
+        <table>
+            <tr>
+                <td class="cell" id="0"></td>
+                <td class="cell" id="1"></td>
+                <td class="cell" id="2"></td>
+            </tr>
+            <tr>
+                <td class="cell" id="3"></td>
+                <td class="cell" id="4"></td>
+                <td class="cell" id="5"></td>
+            </tr>
+            <tr>
+                <td class="cell" id="6"></td>
+                <td class="cell" id="7"></td>
+                <td class="cell" id="8"></td>
+            </tr>
+        </table>
+    </div>
+    <div class="separator"></div>
     <div class="endgame">
         <div class="text"></div>
-        <button onclick="startGame()">Play Again!</button>
+        <br/>
+        <div onclick="startGame()" class="button_base b03_skewed_slide_in">
+                <div>Play Again</div>
+                <div></div>
+                <div>Good luck..</div>
+        </div>
     </div>
 
     <script src="script.js"></script>
