--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <head>
     <title>Tic Tac Toe</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 
@@ -69,9 +70,16 @@
         </div>
     </div>
 
+    <div class="footer">
+        <p class="footer-text">Made with <i class="fa fa-heart love-icon"></i> by Vinay</p>
+        <p class="footer-link">
+            <i title="GitHub" class="fa fa-github" onclick="followLink('github')" aria-hidden="true"></i>
+            <i title="LinkedIn" class="fa fa-linkedin-square" onclick="followLink('linkedin')" aria-hidden="true"></i>
+            <i title="Facebook" class="fa fa-facebook-square" onclick="followLink('facebook')" aria-hidden="true"></i>
+        </p>
+    </div>
+
     <script src="script.js"></script>
 </body>
-
-
 
 </html>
